--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -102,7 +102,7 @@
               <span class="visuallyhidden">Petr Unfollow</span>
             </button>
         <% else %>
-            <button class="btn btn-primary" id="9">
+            <button class="btn btn-primary btn-follow" id="9">
               <span class="visuallyhidden">Petr Following</span>
             </button>
         <% end %>
@@ -115,7 +115,7 @@
               <span class="visuallyhidden">Sergey Unfollow</span>
             </button>
         <% else %>
-            <button class="btn btn-primary" id="6">
+            <button class="btn btn-primary btn-follow" id="6">
               <span class="visuallyhidden">Sergey Following</span>
             </button>
         <% end %>
@@ -126,7 +126,7 @@
               <span class="visuallyhidden">Test Unfollow</span>
             </button>
         <% else %>
-            <button class="btn btn-primary" id="8">
+            <button class="btn btn-primary btn-follow" id="8">
               <span class="visuallyhidden">Test Following</span>
             </button>
         <% end %>
