- edit page user profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,15 +27,11 @@
                 <div class="icon iconNotifications">
                   <div class="iconText">Notification</div>
                 </div>
-                <!--<span class="count">-->
-                <!--<span class="count-inner">0</span>-->
-                <!--</span>-->
               </a>
             </li>
             <li class="topics" data-global-action="discover">
               <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="/###"
                  data-component-term="discover_nav" data-nav="discover">
-                <!--<span class="icon iconDiscover">Discover</span>-->
                 <div class="icon iconDiscover">
                   <div class="iconText">Discover</div>
                 </div>
@@ -44,7 +40,6 @@
             <li class="profile" data-global-action="profile">
               <a class="js-nav js-tooltip js-dynamic-tooltip" data-placement="bottom" href="<%=current_user.fullname %>"
                  data-component-term="profile_nav" data-nav="profile">
-                <!--<span class="icon iconProfile">Me</span>-->
                 <div class="icon iconProfile">
                   <div class="iconText">Me</div>
                 </div>
@@ -83,7 +78,7 @@
 
           <li>
             <button class="btn btntwet" data-toggle="modal" onclick="showAllert()">
-              <span class="Icon Icon--tweet Icon--large"></span>
+              <span class=""></span>
               <span class="visuallyhidden">Compose new Tweet</span>
             </button>
           </li>
