--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -29,7 +29,7 @@ html body {
 }
 
 .iconHome {
-  background: url("http://localhost:3000/img/iconNav.png") no-repeat 0px 0px;
+  background: url("http://localhost:3000/img/home.png");
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 30px;
@@ -39,13 +39,13 @@ html body {
 }
 
 .iconHome:hover {
-  background: url("http://localhost:3000/img/iconNavH.png") no-repeat 0px 0px;
+  background: url("http://localhost:3000/img/homeH.png");
   height: 23px;
   background-size: cover;
 }
 
 .iconNotifications {
-  background: url("http://localhost:3000/img/iconNav.png") no-repeat -55px 0px;
+  background: url("http://localhost:3000/img/bell.png");
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 65px;
@@ -55,7 +55,7 @@ html body {
 }
 
 .iconNotifications:hover {
-  background: url("http://localhost:3000/img/iconNavH.png") no-repeat -55px 0px;
+  background: url("http://localhost:3000/img/bellH.png");
   height: 23px;
   background-size: cover;
 }
@@ -77,17 +77,15 @@ html body {
 }
 
 .iconProfile {
-  background: url("http://localhost:3000/img/iconNav.png") no-repeat -159px 0px;
+  background: url("http://localhost:3000/img/user.png") no-repeat;
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 15px;
   height: 23px;
-  background-size: cover;
   margin-top: 0px;
-  background-size: cover;
 }
 .iconProfile:hover {
-  background: url("http://localhost:3000/img/iconNavH.png") no-repeat -159px 0px;
+  background: url("http://localhost:3000/img/userH.png") no-repeat;
   background-size: cover;
 }
 
@@ -114,17 +112,17 @@ html body {
 }
 
 .iconSetting {
-  background: url("http://localhost:3000/img/iconRight.png") no-repeat -55px 0px;
+  background: url("http://localhost:3000/img/cog.png") no-repeat;
   padding-right: 4px;
   padding-left: 30px;
   width: auto;
   height: 23px;
-  background-size: cover;
+  background-size: contain;
 }
 
 .iconSetting:hover{
-  background: url("http://localhost:3000/img/iconRightH.png") no-repeat -55px 0px;
-  background-size: cover;
+  background: url("http://localhost:3000/img/cogH.png") no-repeat;
+  background-size: contain;
 }
 
 .icon_bird {
@@ -152,7 +150,6 @@ html body {
   background-color: #66757f;
   border: 0;
   border-radius: 21px;
-  transition: all .2s ease-in-out;
   opacity: .6;
 }
 
@@ -187,7 +184,6 @@ html body {
   background-color: #313c46;
   border: 0;
   border-radius: 21px;
-  transition: all .2s ease-in-out;
   opacity: .6;
   outline: 0;
 }
@@ -321,7 +317,6 @@ small {
   text-align: center;
   display: inline-block;
   font-size: 11px;
-//  width: 100%;
 }
 
 .footer ul li {
