--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -216,17 +216,13 @@ h3 {
 }
 
 .btn-follow {
-  padding: 7px;
   margin-top: 10px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 7px 15px;
 }
 
 .profile .btn-edit {
-  padding: 7px;
   margin-top: 10px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 7px 15px;
 }
 
 .profile .avatar {
@@ -306,9 +302,10 @@ h3 {
   font-size: 14px;
   font-weight: bold;
   color: #292f33;
+  margin-right: -10px;
 }
 
-.profile .tweets .nickname {
+.tweets .nickname {
   color: #8899a6;
   font-size: 13px;
   text-decoration: none!important;
@@ -334,6 +331,7 @@ h3 {
 
 .profile .tweet_panel .reply, .retweet, .star, .points {
   margin-right: 35px;
+  width: 18px;
 }
 
 .profile .tweet_panel .points {
