--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -100,14 +100,22 @@
                 <div class="tweet">
                   <%= tweet.tweet %>
                   <%= hidden_field_tag :user_id, tweet.user_id %>
-                  <% if @current_user.id == tweet.user_id %>
-                      <a class="del" style="float: right" id=<%= tweet.id %>>del</a>
-                  <% end %>
+
                   <div class="tweet_panel">
+
                     <img class="reply" src="/img/reply.png">
                     <img class="retweet" src="/img/retweet.png">
                     <img class="star" src="/img/star.png">
-                    <img class="points" src="/img/points.png">
+
+                    <span class="dropdown">
+                        <img class="points" data-toggle="dropdown" src="/img/points.png">
+                      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                        <li><a>Embed Tweet</a></li>
+                        <% if @current_user.id == tweet.user_id %>
+                            <li><a class="del" id=<%= tweet.id %>>Delete tweet</a></li>
+                        <% end %>
+                      </ul>
+                    </span>
 
                   </div>
 
@@ -121,3 +129,41 @@
   </div>
 
 </div>
+
+<script>
+  $(document).ready(function () {
+
+      $('img.reply').mousemove(function(){
+          $(this).attr('src', '/img/replyH.png')
+      });
+
+      $('img.reply').mouseout(function(){
+          $(this).attr('src', '/img/reply.png')
+      });
+
+      $('img.retweet').mousemove(function(){
+          $(this).attr('src', '/img/retweetH.png')
+      });
+
+      $('img.retweet').mouseout(function(){
+          $(this).attr('src', '/img/retweet.png')
+      });
+
+      $('img.star').mousemove(function(){
+          $(this).attr('src', '/img/starH.png')
+      });
+
+      $('img.star').mouseout(function(){
+          $(this).attr('src', '/img/star.png')
+      })
+
+      $('img.points').mousemove(function(){
+          $(this).attr('src', '/img/pointsH.png')
+      });
+
+      $('img.points').mouseout(function(){
+          $(this).attr('src', '/img/points.png')
+      })
+
+  })
+</script>
