--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
 
         <div class="dashboardProfileCard">
           <a href="/<%= current_user.fullname %>">
-            <img src="/img/default_profile.png">
+            <%= image_tag @current_user.avatar.url(:medium) %>
           </a>
 
           <div class="user_name">
