--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -19,6 +19,14 @@ textarea.no-expand {
   height: 100%;
 }
 
+.global_profile {
+  background: #f5f8fa;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .tweetsHead {
   border: 1px solid #e1e8ed;
   border-bottom: 1px solid #e1e8ed;
@@ -47,21 +55,48 @@ textarea.no-expand {
 
 .mainTweets .content {
   background-color: white;
-  padding: 15px 0px;
+  padding: 1px 0px;
   margin-top: 0;
 }
 
 .mainTweets .content a {
-  padding-left: 10px;
-  padding-right: 10px;
+
+}
+
+.container .profileNav {
+  position: relative;
+  left: 300px;
+}
+
+.container .btn-follow, .btn-edit {
+  position: relative;
+  left: 500px;
+}
+
+.hover_tweet:hover {
+  background-color: #ebf2f7;
+}
+
+.mainTweets .img_tweet {
+  height: 48px;
+  width: 48px;
+  border-radius: 4px;
+  margin: 5px 10px 10px;
+  float: left;
+  text-decoration: none!important;
 }
 
 .tweet {
   border-bottom: 1px solid #e1e8ed;
   cursor: pointer;
   margin-left: 0px;
-  padding: 10px 10px 10px 20px;
+  padding: 0px 10px 10px 68px;
   font-size: 16px;
+}
+
+.tweet a {
+  font-size: 12px;
+  color: #8899a6;
 }
 
 .mainProfile {
@@ -130,6 +165,7 @@ textarea.no-expand {
 .user_info .value {
   display: block;
   font-size: 18px;
+  text-align: left;
 }
 
 .user_info ul li a:hover {
@@ -187,6 +223,12 @@ h3 {
 
 }
 
+
+.profile .appContainer ul{
+  float: left;
+  margin-right: 100px
+}
+
 .profile .nav {
   height: 60px;
   -moz-box-sizing: border-box;
@@ -226,14 +268,15 @@ h3 {
 }
 
 .profile .avatar {
-  bottom: -65px;
-  left: 250px;
+  top: 116px;
+  margin-left: 50px;
+  margin-left: 50px;
   z-index: 1;
   background: #fff;
   border: 5px solid #fff;
   border-radius: 12px;
-  box-shadow: 0 1px 1px rgba(136,153,166,0.15);
-  position: relative;
+  box-shadow: 0 1px 1px rgba(136, 153, 166, 0.15);
+  position: absolute;
   width: 200px;
   overflow: hidden;
 }
@@ -247,7 +290,7 @@ h3 {
   display: block;
   font-size: 14px;
   left: 0px;
-  margin-left: -325px;
+  margin-left: -267px;
   margin-top: -30px;
 }
 
@@ -298,11 +341,22 @@ h3 {
   text-decoration: none!important;
 }
 
+.fullname {
+  color: black;
+  float: left;
+  padding-right: 5px;
+}
+
+.fullname:hover {
+  color: #0083b3;
+  text-decoration: underline;
+}
+
 .profile .tweets .fullname {
   font-size: 14px;
   font-weight: bold;
   color: #292f33;
-  margin-right: -10px;
+  margin-right: 0px;
 }
 
 .tweets .nickname {
@@ -329,12 +383,30 @@ h3 {
   margin-top: 45px;
 }
 
-.profile .tweet_panel .reply, .retweet, .star, .points {
+.profile .tweet_panel .reply {
   margin-right: 35px;
   width: 18px;
+}
+.profile .tweet_panel .retweet {
+  margin-right: 35px;
+  width: 18px;
+}
+.profile .tweet_panel .star, .points {
+  margin-right: 35px;
+  width: 18px;
+}
+
+.mainTweets .tweet_panel_i .reply, .retweet, .star, .points {
+  margin-right: 5px;
+  width: 14px;
 }
 
 .profile .tweet_panel .points {
   width: 20px;
   margin-top: 0px;
+}
+
+.time-ago {
+  font-size: 13px;
+  color: #8899a6
 }
