--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -128,6 +128,7 @@ textarea.no-expand {
   background-color: #fff;
   border-radius: 6px;
   padding: 3px;
+  width: 76px;
 }
 
 .dashboardProfileCard .user_name {
