--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,10 +20,10 @@
           </a>
 
           <div class="user_name">
-            <h3><a>Цибульський</a></h3>
+            <h3><a><%= current_user.fullname %></a></h3>
           </div>
           <div class="nickname">
-            <h6>@seruy1993</h6>
+            <h6>@<%= current_user.fullname %></h6>
           </div>
         </div>
 
